sumo/tests/sumo/output/e3/errors/pos_false__exit/errors.sumo
Error: Attribute 'pos' in definition of detExit '4/1to3/1' is not of type float.
Quitting (on error).
